--- a/public/css/app.css
+++ b/public/css/app.css
@@ -10641,3 +10641,11 @@ input {
   margin-top: 50px;
 }
 
+#logout {
+  cursor: default;
+}
+
+#logout:hover {
+  background-color: transparent;
+}
+
